{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 50,
  "lineage": "29352c17-5a66-134b-7062-34b7418e130b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b328d4749876776",
            "arn": "arn:aws:ec2:us-east-1:257544353206:elastic-ip/eipalloc-05b328d4749876776",
            "association_id": "eipassoc-08e40808a936f9523",
            "domain": "vpc",
            "id": "eipalloc-05b328d4749876776",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0461f33aac0947eff",
            "private_dns": "ip-10-0-1-59.ec2.internal",
            "private_ip": "10.0.1.59",
            "public_dns": "ec2-98-90-112-20.compute-1.amazonaws.com",
            "public_ip": "98.90.112.20",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cleyverse-nat-eip-1-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-nat-eip-1-staging",
              "Project": "Cleyverse"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e5f794cc424c97f",
            "arn": "arn:aws:ec2:us-east-1:257544353206:elastic-ip/eipalloc-08e5f794cc424c97f",
            "association_id": "eipassoc-061e8caaa4afc3272",
            "domain": "vpc",
            "id": "eipalloc-08e5f794cc424c97f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-055db62f801b62a42",
            "private_dns": "ip-10-0-2-29.ec2.internal",
            "private_ip": "10.0.2.29",
            "public_dns": "ec2-98-90-45-95.compute-1.amazonaws.com",
            "public_ip": "98.90.45.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cleyverse-nat-eip-2-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-nat-eip-2-staging",
              "Project": "Cleyverse"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cleyverse_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:257544353206:instance/i-0f515f4976fc362aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f515f4976fc362aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cleyverse-key-staging",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-016ad8b467e65b98a",
            "private_dns": "ip-10-0-1-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-3-236-39-203.compute-1.amazonaws.com",
            "public_ip": "3.236.39.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:257544353206:key/6eb6d485-f37b-4a5b-8dd2-2d0ad8f0c1b3",
                "tags_all": {
                  "DataRetention": "7years",
                  "Environment": "staging",
                  "GDPR": "Compliant",
                  "Project": "Cleyverse"
                },
                "throughput": 125,
                "volume_id": "vol-02d17c6e5e20f2472",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098e42d130b16417c",
            "tags": {
              "Name": "cleyverse-app-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-app-staging",
              "Project": "Cleyverse"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060323870c31cf310"
            ]
          },
          "dependencies": [
            "aws_key_pair.cleyverse_key",
            "aws_kms_key.ebs_key",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.cleyverse_vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cleyverse_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257544353206:internet-gateway/igw-0a56372ce4114e7ee",
            "id": "igw-0a56372ce4114e7ee",
            "owner_id": "257544353206",
            "tags": {
              "Name": "cleyverse-igw-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-igw-staging",
              "Project": "Cleyverse"
            },
            "vpc_id": "vpc-06b6e31fe3ca14dae"
          },
          "dependencies": [
            "aws_vpc.cleyverse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05b328d4749876776",
            "association_id": "eipassoc-08e40808a936f9523",
            "connectivity_type": "public",
            "id": "nat-0c8227e8afa5dbe1d",
            "network_interface_id": "eni-0461f33aac0947eff",
            "private_ip": "10.0.1.59",
            "public_ip": "98.90.112.20",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-098e42d130b16417c",
            "tags": {
              "Name": "cleyverse-nat-gateway-1-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-nat-gateway-1-staging",
              "Project": "Cleyverse"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.cleyverse_igw",
            "aws_subnet.public_subnets",
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e5f794cc424c97f",
            "association_id": "eipassoc-061e8caaa4afc3272",
            "connectivity_type": "public",
            "id": "nat-0033191b4237c20de",
            "network_interface_id": "eni-055db62f801b62a42",
            "private_ip": "10.0.2.29",
            "public_ip": "98.90.45.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-099ee8ca2bddd8a06",
            "tags": {
              "Name": "cleyverse-nat-gateway-2-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-nat-gateway-2-staging",
              "Project": "Cleyverse"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.cleyverse_igw",
            "aws_subnet.public_subnets",
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257544353206:route-table/rtb-08db513ba0f7a83f3",
            "id": "rtb-08db513ba0f7a83f3",
            "owner_id": "257544353206",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c8227e8afa5dbe1d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cleyverse-private-rt-1-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-private-rt-1-staging",
              "Project": "Cleyverse"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b6e31fe3ca14dae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.cleyverse_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257544353206:route-table/rtb-0e89c1973e0767aa8",
            "id": "rtb-0e89c1973e0767aa8",
            "owner_id": "257544353206",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0033191b4237c20de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cleyverse-private-rt-2-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-private-rt-2-staging",
              "Project": "Cleyverse"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b6e31fe3ca14dae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.cleyverse_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257544353206:route-table/rtb-06c770e8b97b837aa",
            "id": "rtb-06c770e8b97b837aa",
            "owner_id": "257544353206",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a56372ce4114e7ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cleyverse-public-rt-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-public-rt-staging",
              "Project": "Cleyverse"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b6e31fe3ca14dae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cleyverse_igw",
            "aws_vpc.cleyverse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0065f5a48166e33b5",
            "route_table_id": "rtb-08db513ba0f7a83f3",
            "subnet_id": "subnet-04d3c5adc3b2c7998"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.cleyverse_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bde81e056b4f6e9b",
            "route_table_id": "rtb-0e89c1973e0767aa8",
            "subnet_id": "subnet-08d1fea2e35eeaddd"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.cleyverse_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09394304507f1bf06",
            "route_table_id": "rtb-06c770e8b97b837aa",
            "subnet_id": "subnet-098e42d130b16417c"
          },
          "dependencies": [
            "aws_internet_gateway.cleyverse_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b88c923a544976b9",
            "route_table_id": "rtb-06c770e8b97b837aa",
            "subnet_id": "subnet-099ee8ca2bddd8a06"
          },
          "dependencies": [
            "aws_internet_gateway.cleyverse_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257544353206:security-group/sg-023e0be48a1a9478f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023e0be48a1a9478f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060323870c31cf310"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cleyverse-db-sg-staging20251018201455127200000004",
            "name_prefix": "cleyverse-db-sg-staging",
            "owner_id": "257544353206",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cleyverse-db-sg-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-db-sg-staging",
              "Project": "Cleyverse"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b6e31fe3ca14dae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.cleyverse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257544353206:security-group/sg-060323870c31cf310",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060323870c31cf310",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "cleyverse-web-sg-staging20251018201449292800000002",
            "name_prefix": "cleyverse-web-sg-staging",
            "owner_id": "257544353206",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cleyverse-web-sg-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-web-sg-staging",
              "Project": "Cleyverse"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b6e31fe3ca14dae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cleyverse_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257544353206:subnet/subnet-04d3c5adc3b2c7998",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d3c5adc3b2c7998",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "257544353206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cleyverse-private-subnet-1-staging",
              "Type": "Private"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-private-subnet-1-staging",
              "Project": "Cleyverse",
              "Type": "Private"
            },
            "vpc_id": "vpc-06b6e31fe3ca14dae"
          },
          "dependencies": [
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257544353206:subnet/subnet-08d1fea2e35eeaddd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d1fea2e35eeaddd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "257544353206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cleyverse-private-subnet-2-staging",
              "Type": "Private"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-private-subnet-2-staging",
              "Project": "Cleyverse",
              "Type": "Private"
            },
            "vpc_id": "vpc-06b6e31fe3ca14dae"
          },
          "dependencies": [
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257544353206:subnet/subnet-098e42d130b16417c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098e42d130b16417c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "257544353206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cleyverse-public-subnet-1-staging",
              "Type": "Public"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-public-subnet-1-staging",
              "Project": "Cleyverse",
              "Type": "Public"
            },
            "vpc_id": "vpc-06b6e31fe3ca14dae"
          },
          "dependencies": [
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257544353206:subnet/subnet-099ee8ca2bddd8a06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099ee8ca2bddd8a06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "257544353206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cleyverse-public-subnet-2-staging",
              "Type": "Public"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-public-subnet-2-staging",
              "Project": "Cleyverse",
              "Type": "Public"
            },
            "vpc_id": "vpc-06b6e31fe3ca14dae"
          },
          "dependencies": [
            "aws_vpc.cleyverse_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cleyverse_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257544353206:vpc/vpc-06b6e31fe3ca14dae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e5cd84306480c1f",
            "default_route_table_id": "rtb-03ee1a97876d06c42",
            "default_security_group_id": "sg-0494af0af4ab740aa",
            "dhcp_options_id": "dopt-02f815c67a5d7b4b2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b6e31fe3ca14dae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ee1a97876d06c42",
            "owner_id": "257544353206",
            "tags": {
              "Name": "cleyverse-vpc-staging"
            },
            "tags_all": {
              "DataRetention": "7years",
              "Environment": "staging",
              "GDPR": "Compliant",
              "Name": "cleyverse-vpc-staging",
              "Project": "Cleyverse"
            }
          }
        }
      ]
    }
  ]
}